// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBarMenuButton matches snapshot 1`] = `
<button
  aria-expanded={false}
  aria-haspopup={true}
  className="sc-bczRLJ dKgZvy"
  data-rac=""
  data-react-aria-pressable={true}
  id="react-aria-7"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span>
    Test menu
  </span>
</button>
`;

exports[`NavBarPopoverButton matches custom aria label snapshot 1`] = `
<button
  aria-expanded={false}
  aria-label="Custom label"
  className="sc-bczRLJ dKgZvy"
  data-rac=""
  data-react-aria-pressable={true}
  id="react-aria-5"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span>
    Test menu
  </span>
</button>
`;

exports[`NavBarPopoverButton matches snapshot 1`] = `
<button
  aria-expanded={false}
  className="sc-bczRLJ dKgZvy"
  data-rac=""
  data-react-aria-pressable={true}
  id="react-aria-2"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span>
    Test menu
  </span>
</button>
`;
